ci: fix cache usage in our workflows (#1328)
* remove install swiftlint step from ios pr workflow

* commit just to trigger CI

* remove duplicated step of swiftlint, since we already call it with xcode

* remove warning from CocoaPodsTest

* update fastlane to newest version

* commit just to trigger CI

* trying to update more gems

* changes cache

* just triggering android and backend ci

* using key path as a variable

* trying to get image version like this

* updating all pr workflows to use image version

* make all code similar in every workflow

* remove image version thinking it probably won't happen again

* remove temporary changes

--- a/.github/workflows/pr_danger.yml
+++ b/.github/workflows/pr_danger.yml
@@ -12,16 +12,16 @@ jobs:
         steps:
             -   uses: actions/checkout@v2
 
-            -   name: Cache fastlane dependences
+            # Gems for Fastlane
+            -   name: Cache ruby gems dependencies
                 uses: actions/cache@v2
                 env:
-                    fastlane-cache-key: fastlane-cache
-                    fastlane-path: ~/.gem
+                    keyPath: ${{ runner.os }}-gems
                 with:
-                    path: ${{ env.fastlane-path }}
-                    key: ${{ runner.os }}-build-${{ env.fastlane-cache-key }}-${{ hashFiles('Gemfile.lock') }}
-                    restore-keys: ${{ runner.os }}-build-${{ env.fastlane-cache-key }}
-            -   name: Install Fastlane
+                    path: ~/.gem
+                    key: ${{ env.keyPath }}-${{ hashFiles('Gemfile.lock') }}
+                    restore-keys: ${{ env.keyPath }}
+            -   name: Install gem dependencies
                 run: bundle config set path '~/.gem' && bundle install
                 
             -   name: Run danger check
