--- a/.github/workflows/flutter-pr.yml
+++ b/.github/workflows/flutter-pr.yml
@@ -19,16 +19,17 @@ jobs:
             -   uses: subosito/flutter-action@v1
                 with:
                   channel: 'stable' # or: 'dev' or 'beta'
-            -   name: Cache fastlane dependences
+
+            # Gems for Fastlane
+            -   name: Cache ruby gems dependencies
                 uses: actions/cache@v2
                 env:
-                    fastlane-cache-key: fastlane-cache
-                    fastlane-path: ~/.gem
+                    keyPath: ${{ runner.os }}-gems
                 with:
-                    path: ${{ env.fastlane-path }}
-                    key: ${{ runner.os }}-build-${{ env.fastlane-cache-key }}-${{ hashFiles('Gemfile.lock') }}
-                    restore-keys: ${{ runner.os }}-build-${{ env.fastlane-cache-key }}
-            -   name: Install Fastlane
+                    path: ~/.gem
+                    key: ${{ env.keyPath }}-${{ hashFiles('Gemfile.lock') }}
+                    restore-keys: ${{ env.keyPath }}
+            -   name: Install gem dependencies
                 run: bundle config set path '~/.gem' && bundle install
 
             -   name: Cache pub dependences
