--- a/.github/workflows/ios-pr.yml
+++ b/.github/workflows/ios-pr.yml
@@ -17,21 +17,22 @@ jobs:
         runs-on: macos-latest
 
         steps:
-            -   uses: actions/checkout@v2
+            -   name: Checkout repo
+                uses: actions/checkout@v2
 
-            -   name: Cache fastlane dependences
+            # Gems for Fastlane
+            -   name: Cache ruby gems dependencies
                 uses: actions/cache@v2
                 env:
-                    fastlane-cache-key: fastlane-cache
-                    fastlane-path: ~/.gem
+                    keyPath: ${{ runner.os }}-gems
                 with:
-                    path: ${{ env.fastlane-path }}
-                    key: ${{ runner.os }}-build-${{ env.fastlane-cache-key }}-${{ hashFiles('Gemfile.lock') }}
-                    restore-keys: ${{ runner.os }}-build-${{ env.fastlane-cache-key }}
-
-            -   name: Install Fastlane
+                    path: ~/.gem
+                    key: ${{ env.keyPath }}-${{ hashFiles('Gemfile.lock') }}
+                    restore-keys: ${{ env.keyPath }}
+            -   name: Install gem dependencies
                 run: bundle config set path '~/.gem' && bundle install
 
+            # SPM
             -   name: Cache SPM dependencies
                 uses: actions/cache@v2
                 with:
@@ -39,10 +40,8 @@ jobs:
                     key: ${{ runner.os }}-spm-${{ hashFiles('iOS/**/Package.resolved') }}
                     restore-keys: ${{ runner.os }}-spm
 
-            -   name: install swiftLint
-                run: brew install swiftlint
-
-            -   name: execute Fastlane
+            # Run
+            -   name: Run PR Verification
                 env:
                     GITHUB_USER: ${{ secrets.NAME_REPO_TOKEN }}
                     GITHUB_TOKEN: ${{ secrets.REPO_TOKEN }}
