--- a/.gitignore
+++ b/.gitignore
@@ -83,6 +83,7 @@ flutter/**/.packages
 flutter/**/.pub-cache/
 flutter/**/.pub/
 flutter/**/build/
+flutter/**/test/failures
 flutter/**/pubspec.lock
 flutter_analyze_report.txt
 coverage/
