update path in schema.gradle

--- a/android/schema.gradle
+++ b/android/schema.gradle
@@ -15,8 +15,7 @@
  */
 
 task schema {
-    println projectDir
-    def bashSchema = "./../schema-ruby-erb/model_generation/schema.sh -a".execute()
+    def bashSchema = "$projectDir/../../schema-ruby-erb/model_generation/schema.sh -a".execute()
     bashSchema.waitForProcessOutput(System.out, System.err)
 
     if (bashSchema.exitValue() != 0) {
