--- a/.github/workflows/automated_tests_appium_android.yml
+++ b/.github/workflows/automated_tests_appium_android.yml
@@ -108,10 +108,10 @@ jobs:
         run: | # builds the app replacing localhost for the $BFF_URL. Rollbacks after the app is created
           sed -i --expression "s@http://10.0.2.2:8080@$BFF_URL@g" $BEAGLE_CONFIG_FILE
           bash ./tests/appium/app-android/gradlew --build-cache -p tests/appium/app-android assembleDebug
-          sed -i --expression "s@$BFF_URL@http://10.0.2.2:8080@g" $BEAGLE_CONFIG_FILE
+          # sed -i --expression "s@$BFF_URL@http://10.0.2.2:8080@g" $BEAGLE_CONFIG_FILE
 
       - name: Upload .apk file in BrowserStack and run the Appium test suite
-        run: bash fastlane/automatedTests/appium/setup_apk_in_browserstack_and_run_android_tests.sh
+        run: bash fastlane/automatedTests/appium/android/browserstack/setup_apk_in_browserstack_and_run_android_tests.sh
 
       - name: Expose failed test screenshot files
         if: failure()
