feat: Add flutter logging support
Signed-off-by: paulomeurerzup <paulo.meurer@zup.com.br>

--- a/flutter/sample/pubspec.yaml
+++ b/flutter/sample/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
     path: ../beagle
   beagle_components:
     path: ../beagle_components
+  logging: ^0.11.4
 
 
   # The following adds the Cupertino Icons font to your application.
