--- a/.github/workflows/automated_tests_appium_android.yml
+++ b/.github/workflows/automated_tests_appium_android.yml
@@ -29,8 +29,8 @@ on:
       - '.github/**'
       - 'fastlane/automatedTests/appium/**'
   pull_request_target:
-    branches:
-      - master
+#    branches:
+#      - master
     paths:
       - 'android/**'
       - 'backend/**'
