update workflow schema to codecov coverage

--- a/.github/workflows/schema_tests.yml
+++ b/.github/workflows/schema_tests.yml
@@ -38,10 +38,4 @@ jobs:
             
       - name: Test with Rake
         run: |
-          cd schema-ruby-erb/model_generation && CODECOV_TOKEN=${{ secrets.CODECOV_TOKEN }} CODECOV_FLAG=schema CODECOV_SLUG=ZupIT/beagle rake test
-      
-      - name: Upload coverage results
-        uses: actions/upload-artifact@master
-        with:
-          name: coverage-report
-          path: schema-ruby-erb/model_generation/coverage
+          cd schema-ruby-erb/model_generation && COVERAGE=true CODECOV_TOKEN=${{ secrets.CODECOV_TOKEN }} CODECOV_FLAG=schema CODECOV_SLUG=ZupIT/beagle rake test
