--- a/.github/workflows/automated_tests_appium_ios.yml
+++ b/.github/workflows/automated_tests_appium_ios.yml
@@ -16,7 +16,12 @@
 
 name: Beagle Appium iOS Tests
 
-on: workflow_dispatch
+on:
+  workflow_run:
+    workflows: ["Beagle Appium Tests"] #automated_tests_appium_mobile.yml
+    types:
+      - requested
+#on: workflow_dispatch
 #on:
 #    push:
 #        branches:
