--- a/.github/workflows/automated_tests_appium_mobile.yml
+++ b/.github/workflows/automated_tests_appium_mobile.yml
@@ -14,6 +14,7 @@
 # limitations under the License.
 #
 
+# Workflow used as a reference for triggering Appium tests
 name: Beagle Appium Tests
 #on: workflow_dispatch
 on:
