--- a/.github/workflows/automated_tests_appium_mobile.yml
+++ b/.github/workflows/automated_tests_appium_mobile.yml
@@ -43,7 +43,7 @@ on:
 
 jobs:
   appium_tests:
-    name: Tests job
+    name: Trigger job
     runs-on: macos-latest
     steps:
       - name: Start mobile tests
