--- a/.github/workflows/ios-pr.yml
+++ b/.github/workflows/ios-pr.yml
@@ -19,12 +19,14 @@ jobs:
         steps:
             -   name: Checkout repo
                 uses: actions/checkout@v2
+                with:
+                    fetch-depth: 100
 
             # Gems for Fastlane
             -   name: Cache ruby gems dependencies
                 uses: actions/cache@v2
                 env:
-                    keyPath: ${{ runner.os }}-gems-testing
+                    keyPath: ${{ runner.os }}-gems
                 with:
                     path: ~/.gem
                     key: ${{ env.keyPath }}-${{ hashFiles('Gemfile.lock') }}
