--- a/.github/workflows/automated_tests_appium_ios.yml
+++ b/.github/workflows/automated_tests_appium_ios.yml
@@ -18,33 +18,9 @@ name: Beagle Appium iOS Tests
 
 on:
   workflow_run:
-    workflows: ["Beagle Appium Tests"] #automated_tests_appium_mobile.yml
+    workflows: ["Beagle Appium Tests"]
     types:
       - completed
-#on: workflow_dispatch
-#on:
-#    push:
-#        branches:
-#            - master
-#        paths:
-#            - 'iOS/**'
-#            - 'backend/**'
-#            - 'test/appium/app-ios/**'
-#            - 'test/appium/project/**'
-#            - '.github/**'
-#            - 'fastlane/automatedTests/appium'
-#
-#    pull_request:
-#        branches:
-#            - master
-#        paths:
-#            - 'iOS/**'
-#            - 'backend/**'
-#            - 'test/appium/app-ios/**'
-#            - 'test/appium/project/**'
-#            - '.github/**'
-#            - 'fastlane/automatedTests/appium'
-
 
 jobs:
   appium_tests:
