--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,6 +1,6 @@
 /*
  * Copyright 2020 ZUP IT SERVICOS EM TECNOLOGIA E INOVACAO SA
- *
+ *sc
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
@@ -15,6 +15,11 @@
  */
 
 buildscript {
+
+    ext {
+        schemaPlatform = "a"
+    }
+
     repositories {
         maven { url "https://plugins.gradle.org/m2/" }
         google()
