--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -14,6 +14,11 @@
  * limitations under the License.
  */
 buildscript {
+
+    ext {
+        schemaPlatform = "b"
+    }
+
     repositories {
         jcenter()
     }
