adjust file schema gradle

--- a/android/beagle/build.gradle
+++ b/android/beagle/build.gradle
@@ -22,7 +22,7 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'de.mannodermaus.android-junit5'
 apply from: new File('./../jacoco-android.gradle')
-apply from: files("$rootDir/../schema.gradle").singleFile
+apply from: new File("$rootDir/../schema.gradle")
 
 android {
     compileSdkVersion Dependencies.Versions.compileSdk
