remove analytics Queue from Service

--- a/.github/workflows/ios-pr.yml
+++ b/.github/workflows/ios-pr.yml
@@ -20,7 +20,7 @@ jobs:
             -   name: Checkout repo
                 uses: actions/checkout@v2
                 with:
-                    fetch-depth: 100
+                    fetch-depth: 10 # increase this number when in a PR with many commits
 
             # Gems for Fastlane
             -   name: Cache ruby gems dependencies
