--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,14 +18,12 @@ buildscript {
     repositories {
         maven { url "https://plugins.gradle.org/m2/" }
         google()
-        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.10"
         classpath "com.github.dcendents:android-maven-gradle-plugin:2.1"
         classpath "com.karumi:shot:4.3.0"
-        classpath "org.jetbrains.dokka:dokka-gradle-plugin:1.4.0"
         classpath "com.hiya:jacoco-android:0.2"
         classpath "com.vanniktech:gradle-maven-publish-plugin:0.13.0"
         classpath "de.mannodermaus.gradle.plugins:android-junit5:1.6.2.0"
@@ -36,6 +34,11 @@ plugins {
     id "io.gitlab.arturbosch.detekt" version "1.14.1"
     id "com.github.ben-manes.versions" version "0.33.0"
     id "br.com.zup.beagle.dependencies"
+    id "org.jetbrains.dokka" version "1.4.20"
+}
+
+repositories {
+    jcenter()
 }
 
 allprojects {
