Adds new action beagle:openExternalURL

--- a/flutter/beagle/android/src/main/AndroidManifest.xml
+++ b/flutter/beagle/android/src/main/AndroidManifest.xml
@@ -17,4 +17,11 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="br.com.zup.beagle.beagle">
+  <queries>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data android:scheme="https" />
+        </intent>
+    </queries>
 </manifest>
