--- a/flutter/beagle/pubspec.yaml
+++ b/flutter/beagle/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   flutter_js: 0.2.2+0
   shared_preferences: 0.5.12+4
+  url_launcher: ^5.7.10
 
 dev_dependencies:
   flutter_test:
