--- a/tests/appium/app-android/app/build.gradle
+++ b/tests/appium/app-android/app/build.gradle
@@ -59,7 +59,7 @@ dependencies {
 
     implementation project(Dependencies.Modules.core)
     kapt project(Dependencies.Modules.processor)
-
+    implementation Dependencies.GsonLibraries.gson
     implementation Dependencies.GeneralLibraries.kotlin
     implementation Dependencies.AndroidxLibraries.coreKtx
     implementation Dependencies.AndroidxLibraries.appcompat
