--- a/flutter/beagle/pubspec.yaml
+++ b/flutter/beagle/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   flutter_js: 0.2.2+0
   shared_preferences: 0.5.12+4
+  get_it: ^5.0.6
 
 dev_dependencies:
   flutter_test:
