--- a/.github/workflows/automated_tests_appium_android.yml
+++ b/.github/workflows/automated_tests_appium_android.yml
@@ -14,11 +14,11 @@
 # limitations under the License.
 #
 
-name: Beagle Appium Android Tests
+name: Beagle Appium Android Tests (custom)
 
 on:
   workflow_run:
-    workflows: ["Beagle Appium Tests"]
+    workflows: [ "Beagle Appium Tests" ]
     types:
       - completed
 
@@ -28,8 +28,25 @@ jobs:
     runs-on: ubuntu-20.04
     env:
       BFF_NAME: automated-test-bff
+    outputs:
+      sourceHeadRepo: ${{ steps.source-run-info.outputs.sourceHeadRepo }}
+      sourceHeadBranch: ${{ steps.source-run-info.outputs.sourceHeadBranch }}
+      sourceHeadSha: ${{ steps.source-run-info.outputs.sourceHeadSha }}
+      mergeCommitSha: ${{ steps.source-run-info.outputs.mergeCommitSha }}
+      targetCommitSha: ${{ steps.source-run-info.outputs.targetCommitSha }}
+      pullRequestNumber: ${{ steps.source-run-info.outputs.pullRequestNumber }}
+      pullRequestLabels: ${{ steps.source-run-info.outputs.pullRequestLabels }}
+      targetBranch: ${{ steps.source-run-info.outputs.targetBranch }}
+      sourceEvent: ${{ steps.source-run-info.outputs.sourceEvent }}
     steps:
       - uses: actions/checkout@v2
+
+      - name: "Get information about the origin 'CI' run"
+        uses: potiuk/get-workflow-origin@v1_1
+        id: source-run-info
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          sourceRunId: ${{ github.event.workflow_run.id }}```
 
       - name: Cache gradle dependencies of project backend
         uses: actions/cache@v2
