--- a/.github/workflows/automated_tests_appium_ios.yml
+++ b/.github/workflows/automated_tests_appium_ios.yml
@@ -17,6 +17,7 @@
 name: Beagle Appium iOS Tests
 
 on:
+  workflow_dispatch
   workflow_run:
     workflows: ["Beagle Appium Tests"]
     types:
@@ -28,6 +29,10 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.workflow_run.head_branch }}
+      - run: git branch
+      - run: env
 
       ##################################################################################################
       # Caching - Start
