fix: make triggered scripts run on custom branch (#1394)
* tests

* fix

* add horusec exception

* update

--- a/.github/workflows/automated_tests_appium_ios.yml
+++ b/.github/workflows/automated_tests_appium_ios.yml
@@ -28,6 +28,10 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.workflow_run.head_branch }}
+
+      - run: git branch
 
       ##################################################################################################
       # Caching - Start
