--- a/.github/workflows/release-kdocs.yml
+++ b/.github/workflows/release-kdocs.yml
@@ -31,3 +31,11 @@ jobs:
               working-directory: backend
             - name: merge docs
               run: bash fastlane/kdocs/merge_docs.sh
+            - name: Configure AWS Credentials
+              uses: aws-actions/configure-aws-credentials@v1
+              with:
+                aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                aws-region: sa-east-1
+            - name: S3 upload (latest version)
+              run: aws s3 sync --acl public-read --follow-symlinks public s3://${{ secrets.AWS_S3_DOC_BUCKET }}/ --delete
