--- a/.github/workflows/release-kdocs.yml
+++ b/.github/workflows/release-kdocs.yml
@@ -34,8 +34,8 @@ jobs:
             - name: Configure AWS Credentials
               uses: aws-actions/configure-aws-credentials@v1
               with:
-                aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                aws-access-key-id: ${{ secrets.AWS_DOCS_ACCESS_KEY_ID }}
+                aws-secret-access-key: ${{ secrets.AWS_DOCS_SECRET_ACCESS_KEY }}
                 aws-region: sa-east-1
             - name: S3 upload (latest version)
-              run: aws s3 sync --acl public-read --follow-symlinks fastlane/kdocs/public s3://${{ secrets.AWS_S3_DOC_BUCKET }}/ --delete
+              run: aws s3 sync --acl public-read --follow-symlinks fastlane/kdocs/public s3://${{ secrets.AWS_DOCS_S3_BUCKET }}/ --delete
