--- a/android/build.gradle
+++ b/android/build.gradle
@@ -15,6 +15,9 @@
  */
 
 buildscript {
+    ext {
+        kotlin_version = '1.4.31'
+    }
     repositories {
         maven { url "https://plugins.gradle.org/m2/" }
         google()
@@ -29,6 +32,7 @@ buildscript {
         classpath "com.hiya:jacoco-android:0.2"
         classpath "com.vanniktech:gradle-maven-publish-plugin:0.13.0"
         classpath "de.mannodermaus.gradle.plugins:android-junit5:1.6.2.0"
+        classpath "com.google.protobuf:protobuf-gradle-plugin:0.8.13"
     }
 }
 
