--- a/android/sample/build.gradle
+++ b/android/sample/build.gradle
@@ -72,5 +72,6 @@ dependencies {
 
 
     implementation project(Dependencies.Modules.core)
+    implementation project(Dependencies.Modules.grpc)
     kapt project(Dependencies.Modules.processor)
 }
