--- a/.github/workflows/automated_tests_appium_ios.yml
+++ b/.github/workflows/automated_tests_appium_ios.yml
@@ -98,25 +98,30 @@ jobs:
 #          echo "##### List of iOS Devices & Platforms:"
 #          xcrun simctl list
 #          xcversion simulators --install='iOS 13.5'
-#      - name: Prepare iOS 13.5 simulator
-#        run: |
-#          sudo mkdir -p /Library/Developer/CoreSimulator/Profiles/Runtimes
-#          sudo ln -s /Applications/Xcode_10.3.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/Library/CoreSimulator/Profiles/Runtimes/iOS.simruntime /Library/Developer/CoreSimulator/Profiles/Runtimes/iOS\ 13.5.simruntime
-#          # xcrun simctl list runtimes
-#          # xcrun simctl create custom-test-device "iPad Pro (9.7-inch)" "com.apple.CoreSimulator.SimRuntime.iOS-13-5"
-#          # xcrun simctl list devices 13.5
-
-      - name: Create and Run iOS Emulator
+      - name: Prepare iOS 13.5 simulator
         run: |
           set -e
-          echo "##### Devicetypes runtime:"
-          xcrun simctl list devicetypes runtimes
-          echo "##### Creating iOS image and starting emulator with it ..."
-          xcrun simctl create TestiPhoneX com.apple.CoreSimulator.SimDeviceType.iPhone-11 com.apple.CoreSimulator.SimRuntime.iOS-14-4 > ~/deviceIdTemp.txt
+          sudo mkdir -p /Library/Developer/CoreSimulator/Profiles/Runtimes
+          sudo ln -s /Applications/Xcode_10.3.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/Library/CoreSimulator/Profiles/Runtimes/iOS.simruntime /Library/Developer/CoreSimulator/Profiles/Runtimes/iOS\ 13.5.simruntime
+          xcrun simctl list runtimes
+          xcrun simctl create TestiPhoneX "com.apple.CoreSimulator.SimDeviceType.iPhone-11" "com.apple.CoreSimulator.SimRuntime.iOS-13-5" > ~/deviceIdTemp.txt
+          xcrun simctl list devices 13.5
           DEVICEUUID=`cat ~/deviceIdTemp.txt`
           echo "Device id: $DEVICEUUID"
           xcrun simctl boot $DEVICEUUID
           sleep 30
+
+#      - name: Create and Run iOS Emulator
+#        run: |
+#          set -e
+#          echo "##### Devicetypes runtime:"
+#          xcrun simctl list devicetypes runtimes
+#          echo "##### Creating iOS image and starting emulator with it ..."
+#          xcrun simctl create TestiPhoneX com.apple.CoreSimulator.SimDeviceType.iPhone-11 com.apple.CoreSimulator.SimRuntime.iOS-14-4 > ~/deviceIdTemp.txt
+#          DEVICEUUID=`cat ~/deviceIdTemp.txt`
+#          echo "Device id: $DEVICEUUID"
+#          xcrun simctl boot $DEVICEUUID
+#          sleep 30
 
       ##################################################################################################
       # Emulator config - end
