--- a/.github/workflows/automated_tests_appium_ios.yml
+++ b/.github/workflows/automated_tests_appium_ios.yml
@@ -101,10 +101,10 @@ jobs:
 
       - name: Prepare iOS 13.5 simulator
         run: |
-          XCODE-PATH=$(xcode-select --print-path)
-          echo "XCODE-PATH"
+          XCODE-PATH=`xcode-select --print-path`
+          echo "XCODE-PATH:"
           $XCODE-PATH
-          echo "XCODE VERSION"
+          echo "XCODE VERSION:"
           xcodebuild -version
           sudo mkdir -p /Library/Developer/CoreSimulator/Profiles/Runtimes
           sudo ln -s $XCODE-PATH/Platforms/iPhoneOS.platform/Library/Developer/CoreSimulator/Profiles/Runtimes/iOS.simruntime /Library/Developer/CoreSimulator/Profiles/Runtimes/iOS\ 13.5.simruntime
