--- a/.github/workflows/automated_tests_appium_ios.yml
+++ b/.github/workflows/automated_tests_appium_ios.yml
@@ -101,7 +101,7 @@ jobs:
 
       - name: Prepare iOS 13.5 simulator
         run: |
-          XCODE-PATH=`xcode-select --print-path`
+          XCODE-PATH=`which xcode`
           echo "XCODE-PATH:"
           $XCODE-PATH
           echo "XCODE VERSION:"
