--- a/.github/workflows/automated_tests_appium_ios.yml
+++ b/.github/workflows/automated_tests_appium_ios.yml
@@ -101,16 +101,13 @@ jobs:
 
       - name: Prepare iOS 13.5 simulator
         run: |
-          XCODE-PATH=`xcode-select --print-path`
-          echo "XCODE-PATH:"
-          $XCODE-PATH
-          echo "XCODE VERSION:"
-          xcodebuild -version
+          echo "XCODE VERSION: $(xcodebuild -version)"
           sudo mkdir -p /Library/Developer/CoreSimulator/Profiles/Runtimes
-          sudo ln -s $XCODE-PATH/Platforms/iPhoneOS.platform/Library/Developer/CoreSimulator/Profiles/Runtimes/iOS.simruntime /Library/Developer/CoreSimulator/Profiles/Runtimes/iOS\ 13.5.simruntime
-          # xcrun simctl list runtimes
+          sudo ln -s /Applications/Xcode_11.5.app/Contents/Developer/Platforms/iPhoneOS.platform/Library/Developer/CoreSimulator/Profiles/Runtimes/iOS.simruntime /Library/Developer/CoreSimulator/Profiles/Runtimes/iOS\ 13.5.simruntime
+          echo "XCODE VERSION: $(xcodebuild -version)"
+          xcrun simctl list runtimes
           xcrun simctl create TestiPhoneX com.apple.CoreSimulator.SimDeviceType.iPhone-11 com.apple.CoreSimulator.SimRuntime.iOS-13-5 > ~/deviceIdTemp.txt
-          xcrun simctl list devices 13.5
+          # xcrun simctl list devices 13.5
           DEVICEUUID=`cat ~/deviceIdTemp.txt`
           echo "Device id: $DEVICEUUID"
           xcrun simctl boot $DEVICEUUID
